# admingen

./: .gitignore  Makefile  README.md  TODO  install  pyproject.toml  requirements.txt  run  voice_remover.ipynb
config/: uren_crm.txt
config/giftenoverzicht/: __init__.py  model.py
config/paypal_exact/: __init__.py  worker.py
docs/: design.html  design.rst  htmltools.rst  using_admingen.md  xml_template_language.md
docs/diagrams/: overview.txt  urenadmin.txt
examples/questionnaire/: .gitignore  Makefile  README.md  my_queries.py  run.py  stylesheet.css  uwsgi.ini  webif_templates.xml  webinterface.xml
projects/exact_analysis/: __init__.py
projects/giftenoverzicht/: __init__.py  commands.py  giften.py  model.py  ogen.service  process_locally.py  stylesheet.txt
projects/paypal_exact/: TODO.txt  __init__.py  determine_currency.py  download_data.py  exacttransactions.jinja  exchange_rates  experiment.py  future_improvements.py  paypal_converter.py  persistent_pp_converter.py  run_periodically.py  run_ppexport.py  set_secrets.py  taskconfig.csv  verify.py  verify2.py  voice_remover.ipynb  worker.py
projects/photoviewer/: run.py
projects/processflow/: __init__.py  render.py  test_fsm.py  testscript.txt
projects/scheduler/: __init__.py  test_input.csv
projects/urenreg/: __init__.py  (+3 more)
simulators/: exact.py  paypal.py  smtp.py
test/: factuur_template.odt  output.xml  paypal_example.csv  pp_testdata.csv  reporting.py  server.conf  test.xml  test_csv_handling.py  test_engine.py  test_paypalexport.py  test_server.py  uren_crm.py  uren_crm.txt  zeke_tests.py
(+155 files in other folders)
